# fastAPI-test

./: README.md  pyproject.toml  shortener.db
shortener_app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
