[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Alex Wendland <awendland@cryptocompare.com>"]
readme = "README.md"
packages = [{include = "shortener_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.4"
python-dotenv = "^1.0.0"
validators = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
